# SDXL-Training-Improvements

./: .gitignore  AUTHORS  LICENSE  README.md  classifiers.txt  keywords.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tag_weighter.py
docs/: logging.md  wandb_logging.md
src/: __init__.py  config.yaml  main.py  trainer.py
src/config/: config.py
src/core/: __init__.py  distributed.py  history.py  logging.py  types.py
src/core/logging/: __init__.py  __init__.py.old  base.py  config.py  core.py  core.py.old  formatters.py  logger.py  logging.py  metrics.py  progress.py  progress_predictor.py  setup.py  utils.py  wandb.py
src/core/memory/: __init__.py  layer_offload.py  memory.py  optimizations.py  tensor.py  throughput.py
src/core/utils/: __init__.py  paths.py
src/core/validation/: __init__.py  text_to_image.py
src/data/: __init__.py  config.py  dataset.py
src/data/preprocessing/: __init__.py  bucket_types.py  bucket_utils.py  cache_manager.py  exceptions.py  latents.py  pipeline.py  samplers.py  tag_weighter.py  utils.py
src/data/processors/: sampler.py  text_processor.py
src/data/utils/: __init__.py  paths.py  tensor_utils.py
src/models/: __init__.py  base.py  embeddings.py  sdxl.py  unet.py
src/models/adapters/: lora.py
src/models/encoders/: __init__.py  clip.py  embedding.py  vae.py
src/training/: __init__.py  config.py  flow_matching.py  latents.py  metrics.py  noise.py  scheduler.py  trainer.py  validation.py
src/training/methods/: base.py  ddpm.py  ddpm_trainer.py  flow_matching.py  flow_matching_trainer.py
src/training/optimizers/: __init__.py  base.py
src/training/optimizers/adamw_bfloat16/: __init__.py
src/training/optimizers/adamw_bfloat16/stochastic/: __init__.py
src/training/optimizers/adamw_schedulefree/: __init__.py
src/training/optimizers/soap/: __init__.py
src/training/schedulers/: __init__.py  noise_scheduler.py  novelai_v3.py
src/training/trainers/: SDXLTrainer.py  __init__.py  base.py  base_router.py  ddpm_trainer.py  flow_matching_trainer.py  sdxl_trainer.py
src/training/trainers/SDXL/: SDXL_router.py  __init__.py
src/training/trainers/SDXL/methods/: __init__.py  ddpm_trainer.py  flow_matching_trainer.py
src/training/trainers/methods/: __init__.py  ddpm_trainer.py  example_method.py  flow_matching_trainer.py
src/utils/: __init__.py  clip.py  logging.py  lora.py  memory.py  paths.py  text_to_image_validation.py
