[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0", "build>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdxl-trainer"
dynamic = [
    "version",
    "description",
    "readme",
    "requires-python",
    "license",
    "authors",
    "keywords",
    "classifiers",
    "dependencies",
    "optional-dependencies",
    "scripts"
]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}
description = {file = ["README.md"]}
readme = {file = ["README.md"]}
requires-python = {file = ["requirements-python.txt"]}
license = {file = ["LICENSE"]}
authors = {file = ["AUTHORS"]}
keywords = {file = ["keywords.txt"]}
classifiers = {file = ["classifiers.txt"]}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {file = ["requirements-dev.txt", "requirements-docs.txt"]}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --doctest-modules"
testpaths = [
    "tests",
]
