[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0", "build>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdxl-trainer"
version = "0.1.0"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DataCTE Team"}
]
keywords = ["machine learning", "deep learning", "diffusion", "stable diffusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dynamic = [
    "readme",
    "dependencies",
    "optional-dependencies"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}
[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["requirements-dev.txt"]

[tool.setuptools.dynamic.optional-dependencies.docs] 
file = ["requirements-docs.txt"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --doctest-modules"
testpaths = [
    "tests",
]
